[gd_scene load_steps=57 format=3 uid="uid://bc8eakyri4qd2"]

[ext_resource type="Script" uid="uid://cks858bxgsfcb" path="res://scene/player1.gd" id="1_hjaqi"]
[ext_resource type="Texture2D" uid="uid://b6yvroqibxr68" path="res://arts/sprites/characters/player.png" id="1_xo3ru"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hjaqi"]
atlas = ExtResource("1_xo3ru")
region = Rect2(0, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fvtld"]
atlas = ExtResource("1_xo3ru")
region = Rect2(48, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ct4mp"]
atlas = ExtResource("1_xo3ru")
region = Rect2(96, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_s4jxa"]
atlas = ExtResource("1_xo3ru")
region = Rect2(0, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_oh5ij"]
atlas = ExtResource("1_xo3ru")
region = Rect2(48, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hp4bs"]
atlas = ExtResource("1_xo3ru")
region = Rect2(96, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2vtq"]
atlas = ExtResource("1_xo3ru")
region = Rect2(144, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2fvbb"]
atlas = ExtResource("1_xo3ru")
region = Rect2(0, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ml7e8"]
atlas = ExtResource("1_xo3ru")
region = Rect2(48, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ihjo1"]
atlas = ExtResource("1_xo3ru")
region = Rect2(96, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dk1vr"]
atlas = ExtResource("1_xo3ru")
region = Rect2(144, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_34jf3"]
atlas = ExtResource("1_xo3ru")
region = Rect2(0, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_u7b46"]
atlas = ExtResource("1_xo3ru")
region = Rect2(48, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_j4wxg"]
atlas = ExtResource("1_xo3ru")
region = Rect2(96, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bup7g"]
atlas = ExtResource("1_xo3ru")
region = Rect2(144, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ja17"]
atlas = ExtResource("1_xo3ru")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_v4iqv"]
atlas = ExtResource("1_xo3ru")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_42h83"]
atlas = ExtResource("1_xo3ru")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_iuf2t"]
atlas = ExtResource("1_xo3ru")
region = Rect2(144, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jrjdb"]
atlas = ExtResource("1_xo3ru")
region = Rect2(192, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kk4ol"]
atlas = ExtResource("1_xo3ru")
region = Rect2(240, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4reak"]
atlas = ExtResource("1_xo3ru")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wt23p"]
atlas = ExtResource("1_xo3ru")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_k8m7u"]
atlas = ExtResource("1_xo3ru")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qucqc"]
atlas = ExtResource("1_xo3ru")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xsw3c"]
atlas = ExtResource("1_xo3ru")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_l1uwf"]
atlas = ExtResource("1_xo3ru")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ie14"]
atlas = ExtResource("1_xo3ru")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pk8el"]
atlas = ExtResource("1_xo3ru")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3vgh4"]
atlas = ExtResource("1_xo3ru")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_h3knh"]
atlas = ExtResource("1_xo3ru")
region = Rect2(144, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_n3008"]
atlas = ExtResource("1_xo3ru")
region = Rect2(192, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wpsxb"]
atlas = ExtResource("1_xo3ru")
region = Rect2(240, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rt08c"]
atlas = ExtResource("1_xo3ru")
region = Rect2(0, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6vs06"]
atlas = ExtResource("1_xo3ru")
region = Rect2(48, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4uieu"]
atlas = ExtResource("1_xo3ru")
region = Rect2(96, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5wapc"]
atlas = ExtResource("1_xo3ru")
region = Rect2(144, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xj5ck"]
atlas = ExtResource("1_xo3ru")
region = Rect2(192, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6lu7o"]
atlas = ExtResource("1_xo3ru")
region = Rect2(240, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8rkx0"]
atlas = ExtResource("1_xo3ru")
region = Rect2(0, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wyue1"]
atlas = ExtResource("1_xo3ru")
region = Rect2(48, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_oyaf6"]
atlas = ExtResource("1_xo3ru")
region = Rect2(96, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mtygy"]
atlas = ExtResource("1_xo3ru")
region = Rect2(144, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fmxba"]
atlas = ExtResource("1_xo3ru")
region = Rect2(192, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_n8hgv"]
atlas = ExtResource("1_xo3ru")
region = Rect2(240, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_od4qb"]
atlas = ExtResource("1_xo3ru")
region = Rect2(0, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wsvhi"]
atlas = ExtResource("1_xo3ru")
region = Rect2(48, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_slqdk"]
atlas = ExtResource("1_xo3ru")
region = Rect2(96, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1yrng"]
atlas = ExtResource("1_xo3ru")
region = Rect2(144, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_acav1"]
atlas = ExtResource("1_xo3ru")
region = Rect2(192, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_36u8p"]
atlas = ExtResource("1_xo3ru")
region = Rect2(240, 192, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_rtno0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hjaqi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fvtld")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ct4mp")
}],
"loop": true,
"name": &"die",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s4jxa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oh5ij")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hp4bs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2vtq")
}],
"loop": true,
"name": &"hit_back",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2fvbb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ml7e8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ihjo1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dk1vr")
}],
"loop": true,
"name": &"hit_front",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_34jf3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u7b46")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j4wxg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bup7g")
}],
"loop": true,
"name": &"hit_side",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ja17")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v4iqv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_42h83")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iuf2t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jrjdb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kk4ol")
}],
"loop": true,
"name": &"idle_back",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4reak")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wt23p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k8m7u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qucqc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xsw3c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l1uwf")
}],
"loop": true,
"name": &"idle_front",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ie14")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pk8el")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3vgh4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h3knh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n3008")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wpsxb")
}],
"loop": true,
"name": &"idle_side",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rt08c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6vs06")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4uieu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5wapc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xj5ck")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6lu7o")
}],
"loop": true,
"name": &"walk_back",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8rkx0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wyue1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oyaf6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mtygy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fmxba")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n8hgv")
}],
"loop": true,
"name": &"walk_front",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_od4qb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wsvhi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_slqdk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1yrng")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_acav1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_36u8p")
}],
"loop": true,
"name": &"walk_side",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hjaqi"]
radius = 5.0
height = 10.0

[sub_resource type="CircleShape2D" id="CircleShape2D_hjaqi"]
radius = 16.03122

[node name="Player" type="CharacterBody2D" groups=["Player"]]
y_sort_enabled = true
script = ExtResource("1_hjaqi")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_rtno0")
animation = &"hit_side"
frame_progress = 0.7931721

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 14)
shape = SubResource("CapsuleShape2D_hjaqi")

[node name="hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(0, 8)
shape = SubResource("CircleShape2D_hjaqi")

[node name="cooldown" type="Timer" parent="hitbox"]

[node name="deal_attack" type="Timer" parent="."]

[node name="death" type="Timer" parent="."]
wait_time = 0.569
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(3, 3)
limit_left = 0
limit_top = 0
limit_right = 1161
limit_bottom = 649
rotation_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true

[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_exited" from="hitbox" to="." method="_on_hitbox_body_exited"]
[connection signal="timeout" from="hitbox/cooldown" to="." method="_on_cooldown_timeout"]
[connection signal="timeout" from="deal_attack" to="." method="_on_deal_attack_timeout"]
[connection signal="timeout" from="death" to="." method="_on_death_timeout"]
